button work (resizing, trying to fix mobile cut off issue)

--- a/src/components/Erase/erase.css
+++ b/src/components/Erase/erase.css
@@ -3,7 +3,6 @@
   bottom: 10px;
   left: 10px;
   padding: 10px;
-  margin: 10px;
   background-color: salmon;
   border-radius: 50%;
   border: none;
