--- a/src/components/Fullscreen/fullscreen.css
+++ b/src/components/Fullscreen/fullscreen.css
@@ -3,7 +3,7 @@
   top: 10px;
   right: 90px;
   padding: 10px;
-  margin: 10px;
+  margin-right: 10px;
   /* background-color: #ccc; */
   border-radius: 50%;
   border: none;
@@ -26,6 +26,12 @@
   transform: scale(0.9);
   box-shadow: 1px 1px 2px black;
   background-color: #aaa;
+}
+
+@media screen and (max-width: 900px) {
+  .fullscreen-container {
+    display: none;
+  }
 }
 
 /* #fullscreen {
