--- a/src/components/Options/options.css
+++ b/src/components/Options/options.css
@@ -3,7 +3,6 @@
   top: 10px;
   right: 10px;
   padding: 10px;
-  margin: 10px;
   background-color: #6495ED;
   border-radius: 50%;
   border: none;
