--- a/src/components/OptionsPanel/optionsPanel.css
+++ b/src/components/OptionsPanel/optionsPanel.css
@@ -88,7 +88,7 @@
   transform: scale(0.9);
 }
 
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 900px) {
   .options-panel {
     height: 400px;
     width: 200px;
