--- a/src/components/Screenshot/screenshot.css
+++ b/src/components/Screenshot/screenshot.css
@@ -1,9 +1,8 @@
-.screenshot {
+.screenshot-container {
   position: fixed;
   top: 10px;
   left: 10px;
   padding: 10px;
-  margin: 10px;
   background-color: #FFD700;
   border-radius: 50%;
   border: none;
@@ -13,6 +12,26 @@
   z-index: 9999;
   box-shadow: 2px 2px 4px black;
   transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s;
+}
+
+.screenshot {
+  border-radius: 50%;
+  height: 100%;
+  width: 100%;
+
+  /* position: fixed;
+  top: 10px;
+  left: 10px;
+  padding: 10px;
+  background-color: #FFD700;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+  height: 50px;
+  width: 50px;
+  z-index: 9999;
+  box-shadow: 2px 2px 4px black;
+  transition: transform 0.2s, box-shadow 0.2s, background-color 0.2s; */
 }
 
 .screenshot:active {
